🤖 TEST: Added tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,34 @@ version: "3.7"
 services:
   app: 
     build: ./app
-    restart: always
-    ports: 
-      - "8080:8080"
-  server:
-    build: ./server
+    container_name: frontend
     restart: always
     environment: 
-      - DB_HOST=localhost
+      - VUE_APP_SERVER_URL=http://localhost:3000
+    ports: 
+      - "8080:8080"
+    depends_on: 
+      - server
+      - mongodb
+  server:
+    build: ./server
+    container_name: server
+    restart: always
+    environment: 
+      - DB_HOST=mongodb
       - DB=url-shortner
     ports:
       - "3000:3000"
-  mongo:
-    container_name: mongo
+    depends_on: 
+      - mongodb
+  mongodb:
+    container_name: mongodb
     image: mongo
     environment:
-      MONGO_INITDB_DATABASE: url-shortner
+      mongodb_INITDB_DATABASE: url-shortner
     ports:
       - "27017:27017"
     volumes:
       - data-volume:/data/db
 volumes:
   data-volume:
-
-networks:
-  app-network:
-    name: app-networkx  
