--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
+    "test": "NODE_ENV=test jest  --forceExit --maxWorkers=1",
     "migrate-up": "migrate-mongo up",
     "migrate-create": "migrate-mongo create",
     "migrate-down": "migrate-mongo down",
@@ -26,11 +27,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
-    "@types/mongoose": "^5.7.31",
+    "@types/jest": "^26.0.4",
+    "@types/mongoose": "^5.7.32",
     "@types/mongoose-paginate": "^5.0.8",
     "@types/multer": "^1.4.3",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^12.7.2",
+    "@types/supertest": "^2.0.10",
     "@types/valid-url": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
@@ -38,14 +41,18 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
+    "jest": "^26.1.0",
     "nodemon": "^1.19.1",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.3",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "@types/migrate-mongo": "^7.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -56,5 +63,14 @@
     "multer": "^1.4.2",
     "nanoid": "^3.1.10",
     "valid-url": "^1.0.9"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   }
 }
